# shadow

src/main/: CMakeLists.txt  shadow.h
src/main/bleep_addon/: CMakeLists.txt  bleep_addon.cpp  bleep_addon.h
src/main/bleep_addon/bitcoin_mine_support/: coinflip_validation.cpp  coinflip_validation.h
src/main/bleep_addon/bitcoin_storage_share/: storage_share.cpp  storage_share.h
src/main/bleep_addon/memshare/: memory_sharing.cpp  memory_sharing.h
src/main/bleep_addon/storage_share/src/: CMakeLists.txt
src/main/bleep_addon/storage_share/src/core/: CMakeLists.txt  file_control.cpp  file_control.h
src/main/bleep_addon/storage_share/src/core/data_unit/: data_segment.cpp  data_segment.h
src/main/bleep_addon/storage_share/src/core/datatypes/: datatype.cpp  datatype.h
src/main/bleep_addon/storage_share/src/core/file/: file.cpp  file.h  file_descriptor.cpp  file_descriptor.h  file_tracker.cpp  file_tracker.h
src/main/bleep_addon/storage_share/src/core/share/: sharing_tracker.cpp  sharing_tracker.h
src/main/bleep_addon/storage_share/src/core/util/: options.cpp  options.h  utils.cpp  utils.h
src/main/bleep_addon/storage_share/src/test/: CMakeLists.txt  main.cpp
src/main/core/: shd-main.c  shd-master.c  shd-slave.c  shd-slave.h  shd-worker.c  shd-worker.h
src/main/host/: shd-host.c  shd-host.h  shd-process-undefined.h  shd-process.c  shd-process.h  shd-tracker.c
src/main/ipc/: ipc.c
src/main/routing/: shd-packet.c  shd-packet.h  shd-topology.c  shd-topology.h
src/preload/: CMakeLists.txt  shd-interposer.c  shd-preload-defs-special.h  shd-preload-defs.h
(+17 files in other folders)
